fix: very strange spacing bug in tweets

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -1320,7 +1320,6 @@ span.tweet-body-text {
 }
 
 .tweet-body-main {
-    display: block !important;
     margin-top: 10px
 }
 
