--- a/layouts/tweet/style.css
+++ b/layouts/tweet/style.css
@@ -826,7 +826,6 @@ a:hover,
 }
 
 .tweet-body-main {
-    display: block !important;
     margin-top: 10px
 }
 
